--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,20 +2,19 @@
 
 .footer {
   display: grid;
-  row-gap: 40px;
-  column-gap: 20px;
+  gap: 40px 20px;
   grid-template-columns: repeat(2, 1fr);
   padding: 32px $custom-padding 56px;
   max-width: 1280px;
   margin: auto;
 
-  @include OnTablet {
+  @include on-tablet {
     grid-template-columns: repeat(6, 1fr);
     column-gap: 20px;
     padding: 50px $custom-padding-tablet 36px;
   }
 
-  @include OnDesktop {
+  @include on-desktop {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 30px;
     padding: 48px $custom-padding-desktop 36px;
@@ -27,21 +26,21 @@
     justify-content: space-between;
     align-items: center;
 
-    @include OnTablet {
+    @include on-tablet {
       flex-direction: column;
       justify-content: left;
       row-gap: 62px;
       grid-column: 1 / 2;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       grid-column: span 2;
     }
   }
 
   &__logo {
     display: block;
-    font-family: "Montserrat", sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
@@ -54,7 +53,7 @@
     gap: 20px;
     height: 24px;
 
-    @include OnTablet {
+    @include on-tablet {
       gap: 32px;
     }
   }
@@ -84,12 +83,12 @@
     padding-bottom: 70px;
     border-bottom: 1px solid #1a5a4c80;
 
-    @include OnTablet {
+    @include on-tablet {
       grid-column: 2 / -2;
       padding-bottom: 64px;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       grid-column: span 5;
       border-bottom: 0 solid #1a5a4c80;
       border-right: 1px solid #1a5a4c80;
@@ -122,7 +121,7 @@
     }
 
     &--description {
-      font-family: "Montserrat",sans-serif;
+      font-family: Montserrat, sans-serif;
     }
   }
 
@@ -149,7 +148,7 @@
     width: 50px;
     background-image: url('../images/arrow-up.svg');
 
-    @include OnTablet {
+    @include on-tablet {
       display: none;
     }
   }
@@ -158,11 +157,11 @@
     grid-column: 1 / -1;
     padding-top: 40px;
 
-    @include OnTablet {
+    @include on-tablet {
       grid-column: 2 / -2;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       grid-column: 8 / -1;
     }
   }
@@ -170,8 +169,7 @@
   &__nav {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    row-gap: 20px;
-    column-gap: 20px;
+    gap: 20px;
   }
 
   &__nav-link {
@@ -189,7 +187,7 @@
     display: block;
     padding-top: 80px;
 
-    @include OnTablet {
+    @include on-tablet {
       display: flex;
       justify-content: space-between;
       padding-top: 120px;
