--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,11 +6,11 @@
   row-gap: 20px;
   padding-bottom: 70px;
 
-  @include OnTablet {
+  @include on-tablet {
     grid-template-columns: repeat(6, 1fr);
   }
 
-  @include OnDesktop {
+  @include on-desktop {
     grid-template-columns: repeat(12, 1fr);
     padding-bottom: 200px;
   }
@@ -20,11 +20,11 @@
     width: 100%;
     padding-bottom: 93.75%;
 
-    @include OnTablet {
+    @include on-tablet {
       padding-bottom: 102.5%;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       padding-bottom: calc(1% * #{(655 / 725) * 100});
     }
   }
@@ -40,11 +40,11 @@
     background-size: contain;
     background-repeat: no-repeat;
 
-    @include OnTablet {
+    @include on-tablet {
       background-image: url('../images/HeaderBack2.png');
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       background-image: url('../images/bg3.png');
     }
   }
@@ -58,12 +58,12 @@
   &__navigation-image {
     grid-column: 1 / -1;
 
-    @include OnTablet {
+    @include on-tablet {
       grid-column: 4 / -1;
       grid-row: 1;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       grid-column: 6 / -1;
     }
   }
@@ -74,11 +74,11 @@
     width: 100%;
     z-index: 2;
 
-    @include OnTablet {
+    @include on-tablet {
       padding: 15px $custom-padding-tablet 0;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       padding: 15px $custom-padding-desktop 0;
     }
   }
@@ -89,7 +89,7 @@
     width: 24px;
     background-image: url('../images/menu-icon.svg');
 
-    @include OnDesktop {
+    @include on-desktop {
       &:hover {
         cursor: pointer;
       }
@@ -104,7 +104,7 @@
     transform-origin: right top;
     transform: rotate(-90deg) translateX(50%) translateY(-70px);
 
-    @include OnDesktop {
+    @include on-desktop {
       display: flex;
       align-items: center;
       gap: 20px;
@@ -131,7 +131,7 @@
   &__nav-logo {
     position: relative;
     display: block;
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
@@ -143,13 +143,13 @@
       cursor: pointer;
     }
 
-    @include OnTablet {
+    @include on-tablet {
       width: 220px;
       text-align: center;
       right: calc(50% - 110px);
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       width: 170px;
       right: 52%;
       transform: translateX(50%);
@@ -165,13 +165,13 @@
     justify-content: center;
     gap: 20px;
 
-    @include OnTablet {
+    @include on-tablet {
       grid-column: 1 / 4;
       grid-row: 1;
       padding-inline: $custom-padding-tablet;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       grid-column: 1 / 6;
       gap: 90px;
       padding-inline: $custom-padding-desktop;
@@ -188,17 +188,17 @@
 
   &__nav-title {
     display: block;
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 45px;
     font-weight: 700;
     line-height: 45px;
     text-align: center;
 
-    @include OnTablet {
+    @include on-tablet {
       text-align: left;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       font-size: 72px;
       line-height: 86px;
     }
@@ -217,13 +217,13 @@
     padding: 18px 80px;
     width: 100%;
 
-    @include OnTablet {
+    @include on-tablet {
       height: 70px;
       width: 270px;
       padding: 27px 68px;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       left: calc(50% - #{$custom-padding-desktop});
     }
 
@@ -237,7 +237,7 @@
       background-color: $custom-green;
       z-index: 1;
 
-      @include OnDesktop {
+      @include on-desktop {
         width: 70px;
       }
     }
@@ -258,7 +258,7 @@
     transform: translateY(-50%);
     z-index: 2;
 
-    @include OnDesktop {
+    @include on-desktop {
       right: 23px;
     }
   }
