--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,9 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-@import "../styles/header.scss";
-@import "../styles/footer.scss";
-@import "../styles/menu.scss";
+@import "../styles/header";
+@import "../styles/footer";
+@import "../styles/menu";
 
 
 * {
@@ -15,7 +15,7 @@
 .body {
 
 
-  &:has(#menu:target) {
+  &:has(.menu:target) {
     overflow: hidden;
   }
 }
@@ -23,7 +23,7 @@
 .main {
 
   &__title {
-    font-family: "Montserrat", sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
@@ -31,12 +31,12 @@
     padding-bottom: 40px;
     padding-inline: $custom-padding;
 
-    @include OnTablet {
+    @include on-tablet {
       text-align: left;
       padding-inline: $custom-padding-tablet;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       padding-bottom: 56px;
       padding-inline: $custom-padding-desktop;
     }
@@ -54,12 +54,12 @@
     grid-template-columns: repeat(2, 1fr);
     padding-inline: $custom-padding;
 
-    @include OnTablet {
+    @include on-tablet {
       grid-template-columns: repeat(6, 1fr);
       padding-inline: $custom-padding-tablet;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       grid-template-columns: repeat(12, 1fr);
       padding-inline: $custom-padding-desktop;
       column-gap: 32px;
@@ -69,11 +69,11 @@
   &__event-box {
     grid-column: 1 / -1;
 
-    @include OnTablet {
+    @include on-tablet {
       grid-column: span 4;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -87,7 +87,7 @@
     min-height: 210px;
     transition: transform 0.3s ease-in-out;
 
-    @include OnDesktop {
+    @include on-desktop {
       grid-column: span 7;
 
       max-width: 670px;
@@ -108,7 +108,7 @@
     justify-content: space-between;
     padding-top: 20px;
 
-    @include OnTablet {
+    @include on-tablet {
       font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 500;
@@ -121,12 +121,12 @@
     &--no-margin-vertical {
       padding: 0 20px;
 
-      @include OnTablet {
+      @include on-tablet {
         padding: 0 55px;
         justify-content: space-between;
       }
 
-      @include OnDesktop {
+      @include on-desktop {
         padding: 0;
       }
     }
@@ -153,7 +153,7 @@
   &__event-name {
     position: relative;
     display: block;
-    font-family: "Montserrat", sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
@@ -171,14 +171,14 @@
       height: 10px;
       background-color: $custom-orange;
 
-      @include OnDesktop {
+      @include on-desktop {
         width: 15px;
         height: 15px;
         transform: translateY(50%);
       }
     }
 
-    @include OnTablet {
+    @include on-tablet {
       font-size: 36px;
       padding-top: 15px;
       line-height: 36px;
@@ -188,12 +188,12 @@
       padding-top: 24px;
       text-align: center;
 
-      @include OnTablet {
+      @include on-tablet {
         text-align: left;
         padding-inline: 55px;
       }
 
-      @include OnDesktop {
+      @include on-desktop {
         padding-inline: 0;
       }
 
@@ -222,11 +222,11 @@
     min-height: 210px;
     transition: transform 0.3s ease-in-out;
 
-    @include OnTablet {
+    @include on-tablet {
       padding-inline: $custom-padding-tablet;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       padding-inline: 0;
 
       &:hover {
@@ -244,7 +244,7 @@
     border-bottom: 2px solid #1a5a4c40;
     background-color: #fff;
 
-    @include OnDesktop {
+    @include on-desktop {
       padding: 45px 100px 50px;
     }
   }
@@ -254,7 +254,7 @@
     bottom: 57px;
     padding-inline: $custom-padding;
 
-    @include OnDesktop {
+    @include on-desktop {
       bottom: 102px;
     }
   }
@@ -264,16 +264,16 @@
     max-width: 1280px;
     margin: auto;
 
-    @include OnTablet {
+    @include on-tablet {
       padding-bottom: 92px;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       padding-bottom: 200px;
     }
 
     &--event {
-      @include OnDesktop {
+      @include on-desktop {
         padding-bottom: 98px;
       }
     }
@@ -285,11 +285,11 @@
       background-image: url("../images/subscribe.png");
       max-width: none;
 
-      @include OnTablet {
+      @include on-tablet {
         grid-template-columns: repeat(6, 1fr);
       }
 
-      @include OnDesktop {
+      @include on-desktop {
         grid-template-columns: repeat(12, 1fr);
         background-image: url("../images/subscribe-desktop.png");
       }
@@ -307,7 +307,7 @@
     &--no-carousel {
       display: none;
 
-      @include OnDesktop {
+      @include on-desktop {
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         column-gap: 30px;
@@ -317,18 +317,18 @@
     &--carousel {
       display: flex;
 
-      @include OnDesktop {
+      @include on-desktop {
         display: none;
       }
     }
 
-    @include OnTablet {
+    @include on-tablet {
       padding-left: $custom-padding-tablet;
       padding-bottom: 32px;
       gap: 20px;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       padding-left: 0;
 
       padding-inline: $custom-padding-desktop;
@@ -346,7 +346,7 @@
     min-width: 280px;
     width: calc(#{(280 / 320) * 100} * 1%);
 
-    @include OnTablet {
+    @include on-tablet {
       max-width: 340px;
     }
 
@@ -403,13 +403,13 @@
       display: none;
     }
 
-    @include OnTablet {
+    @include on-tablet {
       &--third {
         display: block;
       }
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       &:hover {
         cursor: pointer;
         transform: scale(1.1);
@@ -424,7 +424,7 @@
     margin: auto;
     justify-content: space-between;
 
-    @include OnDesktop {
+    @include on-desktop {
       display: none;
     }
   }
@@ -444,18 +444,18 @@
     grid-column: 1 / -1;
     padding: 88px $custom-padding;
 
-    @include OnTablet {
+    @include on-tablet {
       grid-column: 2 / -2;
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       grid-column: 4 / 10;
       padding: 164px 0;
     }
   }
 
   &__subscribe-title {
-    font-family: "Montserrat", sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
@@ -463,7 +463,7 @@
     color: #fff;
     padding-bottom: 20px;
 
-    @include OnTablet {
+    @include on-tablet {
       padding-bottom: 16px;
     }
   }
@@ -477,7 +477,7 @@
     color: #fff;
     padding-bottom: 50px;
 
-    @include OnTablet {
+    @include on-tablet {
       padding-bottom: 64px;
     }
   }
@@ -494,7 +494,7 @@
     font-weight: 500;
     line-height: 16px;
 
-    @include OnDesktop {
+    @include on-desktop {
 
       &:hover {
         cursor: pointer;
@@ -512,7 +512,7 @@
     outline: 0;
     border: 0;
 
-    @include OnTablet {
+    @include on-tablet {
       width: 70px;
     }
   }
@@ -530,11 +530,10 @@
   }
 
   &__nav-email {
-    font-family: "Montserrat", sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 14px;
-    background-color: transparent;
     border: 0;
     outline: 0;
     background-color: #fff;
@@ -543,12 +542,12 @@
     padding: 18px 0 18px 24px;
 
 
-    @include OnTablet {
+    @include on-tablet {
       height: 70px;
       width: calc(100% - 86px);
     }
 
-    @include OnDesktop {
+    @include on-desktop {
       width: calc(100% - 100px);
     }
   }
