--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,14 +5,14 @@
   }
 }
 
-@mixin OnTablet {
+@mixin on-tablet {
   @media (min-width: 768px) {
     @content;
   }
 }
 
 
-@mixin OnDesktop {
+@mixin on-desktop {
   @media (min-width: 1280px) {
     @content;
   }
