add hover effect

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -71,6 +71,11 @@ h3 {
   background-repeat: no-repeat;
   background-position: right;
 
+  @include onTablet {
+    height: 384px;
+    background-size: 374px 384px;
+  }
+
   &__top-actions {
     display: flex;
     align-items: center;
