Load museum. take1

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "../styles/utils/keyframes";
 @import "../styles/header";
 @import "../styles/footer";
 @import "../styles/menu";
@@ -549,6 +550,14 @@
 
     @include on-desktop {
       width: calc(100% - 100px);
+    }
+
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus,
+    &:-webkit-autofill:active {
+      transition: background-color 5000s ease-in-out 0s;
+      background-color: transparent;
     }
   }
 }
