--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -216,6 +216,7 @@
     line-height: 16px;
     padding: 18px 80px;
     width: 100%;
+    transition: background-color 0.3s ease, color 0.3s ease;
 
     @include on-tablet {
       height: 70px;
@@ -244,6 +245,8 @@
 
     &:hover {
       cursor: pointer;
+      background-color: $custom-green;
+      color: #fff;
     }
   }
 
