--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -8,24 +8,52 @@ $padding-mobile: 27px;
   width: 100%;
   z-index: 10;
   background-color: rgba(24, 24, 26, 0.5);
+  transition: opacity 0.3s ease-in-out;
   opacity: 0;
   pointer-events: none;
 
   &:target {
     opacity: 1;
     pointer-events: all;
+    & :first-child {
+      animation: 0.3s ease-in-out 0s 1 movetop;
+
+      @include on-tablet {
+        animation: 0.3s ease-in-out 0s 1 movetop-tablet;
+      }
+
+      @include on-desktop {
+        animation: 0.3s ease-in-out 0s 1 movetop-desktop;
+      }
+    }
+  }
+
+  & :first-child {
+    animation: 0.3s ease-in-out 0s 1 movedown;
+
+    @include on-tablet {
+      animation: 0.3s ease-in-out 0s 1 movedown-tablet;
+    }
+
+    @include on-desktop {
+      animation: 0.3s ease-in-out 0s 1 movedown-desktop;
+    }
   }
 
   &__content {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    height: 420px;
 
     @include on-tablet {
       grid-template-columns: repeat(6, 1fr);
+      height: 220px;
     }
 
     @include on-desktop {
       grid-template-columns: repeat(12, 1fr);
+      height: 200px;
     }
 
     background-color: $menu-background;
@@ -39,6 +67,7 @@ $padding-mobile: 27px;
   &__nav {
     display: flex;
     gap: 28px;
+    justify-content: space-between;
     padding-bottom: 24px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     grid-column: span 2;
@@ -77,10 +106,15 @@ $padding-mobile: 27px;
     text-decoration: none;
     color: white;
     grid-column: span 1;
+    transition: color 0.3s ease;
 
     @include on-desktop {
       font-size: 22px;
       line-height: 22px;
+    }
+
+    &:hover {
+      color: $custom-orange;
     }
   }
 
