--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,20 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/header";
+@import "./blocks/menu";
+@import "./blocks/main";
+@import "./blocks/section-title";
+
+@import "./blocks/current-events";
+@import "./blocks/block";
+
+@import "./blocks/subscription";
+@import "./blocks/gallery";
+@import "./blocks/slider";
+@import "./blocks/button";
+
+@import "./blocks/footer";
+@import "./blocks/schedule";
+@import "./blocks/nav";
+@import "./blocks/go-back";
