--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$small-desktop-min-width: 1280px;
+$effectDuretion: 0.3s;
+
+$main-background-color: #fff;
+$green-page-color: #1a5a4c;
+$gray-background-color: #18181a;
+$main-text-color: #4e4e4e;
+$main-title-color: #000;
+$title-color: #0f0e08;
