--- a/src/styles/blocks/block.scss
+++ b/src/styles/blocks/block.scss
@@ -104,6 +104,34 @@
     color: $green-page-color;
   }
 
+  &__title-box {
+    margin-top: 10px;
+
+    display: flex;
+    align-items: center;
+    gap: 12px;
+
+    @include onTablet {
+      margin-top: 32px;
+      gap: 20px;
+    }
+    @include onSmallDesktop {
+      grid-column: 9 / 13;
+      grid-row: 3;
+    }
+  }
+
+  &__title-square {
+    width: 10px;
+    height: 10px;
+    background-color: #f14a27;
+
+    @include onTablet {
+      width: 15px;
+      height: 15px;
+    }
+  }
+
   &__title {
     font-family: "Montserrat", sans-serif;
     color: $title-color;
@@ -111,17 +139,8 @@
     font-weight: 400;
     line-height: 100%;
 
-    margin-top: 10px;
-
     @include onTablet {
-      margin-top: 32px;
       font-size: 36px;
-    }
-
-    @include onSmallDesktop {
-      grid-column: 9 / 13;
-      grid-row: 3;
-
     }
 
     &--lection {
