--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -18,7 +18,8 @@
   }
 
   &__top {
-    // width: 100%;
+    position: relative;
+
     @include onTablet {
       @include pageGrid;
     }
@@ -183,6 +184,16 @@
   }
 
   &__br {
+    @include onTablet {
+      display: none;
+    }
+  }
+
+  &__go-back {
+    position: absolute;
+    bottom: -48px;
+    right: 0;
+
     @include onTablet {
       display: none;
     }
