--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -18,7 +18,7 @@
   }
 
   &__top {
-    position: relative;
+    // position: relative;
 
     @include onTablet {
       @include pageGrid;
@@ -144,6 +144,9 @@
   }
 
   &__bootom {
+
+    position: relative;
+
     @include onTablet {
       @include pageGrid;
     }
@@ -191,7 +194,7 @@
 
   &__go-back {
     position: absolute;
-    bottom: -48px;
+    top: -110px;
     right: 0;
 
     @include onTablet {
