add task solution

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,16 @@
 @import "utils/vars";
 @import "utils/mixins";
 @import "utils/extends";
+
+@import "utils/container";
+@import "utils/header";
+@import "utils/top-bar";
+@import "utils/main";
+@import "utils/actual";
+@import "utils/section-tittle";
+@import "utils/product";
+@import "utils/romantic";
+@import "utils/slider";
+@import "utils/page";
+@import "utils/menu";
+@import "utils/nav";
