--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$desktop1200-min-width:1440px;
+$time-transition:1000ms;
+$effect-duration: 300ms;
+$color-black: #000;
+$color-black-black: #0f0e08;
+$color-gray: #687480;
+$color-green: #1a5a4c;
+$color-gr: #4e4e4e;
+$color-orange: #f14a27;
+$color-white: #fff;
