--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,8 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: "Roboto";
+//   src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
+//   font-weight: normal;
+//   font-style: normal;
+// }
+
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;500;700&display=swap");
