add task solution

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -5,7 +5,7 @@
 @import "utils/container";
 @import "utils/header";
 @import "utils/top-bar";
-@import "utils/main";
+// @import "utils/main";
 @import "utils/actual";
 @import "utils/section-tittle";
 @import "utils/product";
