fixed last commits

--- a/src/styles/blocks/actual_content.scss
+++ b/src/styles/blocks/actual_content.scss
@@ -42,12 +42,13 @@
       line-height: 48px;
       grid-column: 1/5;
       grid-row: 1;
-      margin: 0;
+      margin-left: -50px;
     }
 
     @include on-desctop {
       grid-column: 1/6;
       grid-row: 1;
+      margin-left: -70px;
     }
   }
 
