--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -291,9 +291,10 @@
   .footer__text {
     font-family: $ibm;
     font-size: 14px;
-
+    transition: 0.3s;
     &:hover {
       font-size: 16px;
+      transition: 0.3s;
     }
   }
 }
