--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -34,10 +34,11 @@
   padding: 0;
 
   @include on-phone {
-    width: 280px;
+    width: 320px;
     height: 300px;
     grid-column: 1/3;
     grid-row: 1;
+    margin-left: -20px;
   }
 
   @include on-tablet {
@@ -49,8 +50,9 @@
 
   @include on-desctop {
     grid-column: 6 /12;
-    width: 725px;
+    width: 780px;
     height: 655px;
+    margin-left: 60px;
   }
 }
 
@@ -78,7 +80,7 @@
   @include on-phone {
     grid-column: 1/1;
     grid-row: 1;
-    margin: 33px -20px 0 23px;
+    margin-top: 25px;
   }
 
   @include on-tablet {
@@ -213,6 +215,8 @@
     margin: 0;
     padding: 0;
   }
+
+
 
   .header__text {
     font-family: $ibm;
