--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -91,6 +91,14 @@
     font-size: 22px;
     color: $white;
     margin: 0 0 30px;
+    transition: 0.3s;
+
+
+    @include on-phone {
+      margin-right: -50px;
+      padding-right: 20px;
+      font-size: 16px;
+    }
 
     @include on-tablet {
       font-size: 16px;
@@ -98,7 +106,7 @@
 
     &:hover {
       font-size: 23px;
-      transition: transform 0.3s;
+      transition: 0.3s;
     }
   }
 
