--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,29 +1,42 @@
 .gallery {
   position: relative;
-  padding-bottom: 100px;
+  width: 100%;
+  max-height: 500px;
   height: 100%;
+  z-index: -1;
+
+  .gallery-slider__nav {
+    position: absolute;
+    bottom: 0;
+  }
 
   &-slider {
     width: 100%;
-    // width: 300px;
-    height: 410px;
+    max-height: 410px;
+    height: auto;
     overflow: hidden;
+    // overflow-x: hidden;
 
     &__nav {
       position: absolute;
+      display: flex;
+      width: fit-content;
+      height: auto;
       bottom: 16px;
       left: 50%;
       transform: translateX(-50%);
-      display: flex;
     }
 
     &__btn {
+      position: relative;
+      display: flex;
       height: 9px;
       width: 9px;
       border-radius: 50%;
       margin: 6px;
       cursor: pointer;
       background-color: #e0e0e0;
+      z-index: 10;
       transition: all 0.4s ease;
 
       &:hover {
@@ -35,14 +48,25 @@
       width: 400%;
       height: 100%;
       display: flex;
+      padding-bottom: 100px;
+
+      @include onTablet {
+        width: 200%;
+      }
     }
 
     &__slide {
       width: 25%;
-      transition: all 0.6 ease;
+      transition: all 0.6s ease;
+
+      @include onTablet {
+        width: 50%;
+        margin-right: 20px;
+      }
+
       & img {
-        width: 100%;
         height: 100%;
+        width: 100%;
       }
     }
   }
@@ -63,16 +87,28 @@ input[name="button"] {
 
 #btn1:checked ~ .s1 {
   margin-left: 0;
+  @include onTablet {
+    margin-left: 0;
+  }
 }
 
 #btn2:checked ~ .s1 {
   margin-left: -25%;
+  @include onTablet {
+    margin-left: -50%;
+  }
 }
 
 #btn3:checked ~ .s1 {
   margin-left: -50%;
+  @include onTablet {
+    margin-left: -125%;
+  }
 }
 
 #btn4:checked ~ .s1 {
   margin-left: -75%;
+  @include onTablet {
+    margin-left: -150%;
+  }
 }
