fixed last commits

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,10 +1,12 @@
 .footer {
+    position: relative;
+
   @include on-phone {
     display: grid;
     grid-template-columns: repeat(2, 130px);
     justify-content: center;
     gap: 20px;
-    margin: 0 20px 128px;
+    margin: 50 22px 68px;
   }
 
   @include on-tablet {
@@ -12,14 +14,14 @@
     grid-template-columns: repeat(6, 90px);
     justify-content: center;
     gap: 30px;
-    margin: 51px 39px 133px;
+    margin: 51px 35px 36px;
   }
 
   @include on-desctop {
     display: grid;
     grid-template-columns: repeat(12, 70px);
     gap: 30px;
-    margin: 48px 55px 200px;
+    margin: 47px 55px 35px;
   }
 }
 
@@ -292,6 +294,7 @@
     font-family: $ibm;
     font-size: 14px;
     transition: 0.3s;
+
     &:hover {
       font-size: 16px;
       transition: 0.3s;
