--- a/src/styles/blocks/galery.block.scss
+++ b/src/styles/blocks/galery.block.scss
@@ -29,13 +29,24 @@
   font-weight: 700;
   font-size: 36px;
 
+
   @include on-phone {
     grid-column: 1/2;
     margin: 0 0 0 50px;
   }
 
-  @include on-desctop {
+  @include on-tablet {
+    position: relative;
     grid-row: 1;
+    top: 130px;
+    left: -50px;
+  }
+
+  @include on-desctop {
+    position: relative;
+    grid-row: 1;
+    top: 120px;
+    left: -50px;
   }
 }
 
