--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -85,13 +85,14 @@
   transition: transform 0.3s;
 
   .menu__text {
+    box-sizing: border-box;
     width: 169px;
     font-family: $ibm;
     font-weight: 500;
     font-size: 22px;
     color: $white;
-    margin: 0 0 30px;
-    transition: 0.3s;
+    padding: 0 0 30px;
+    transition: 0.3s ease;
 
 
     @include on-phone {
@@ -106,7 +107,7 @@
 
     &:hover {
       font-size: 23px;
-      transition: 0.3s;
+      transition: 0.3s ease;
     }
   }
 
