--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -1,1 +1,9 @@
 @import "blocks/header";
+@import "blocks/menu";
+@import "blocks/schedule";
+@import "blocks/section";
+@import "blocks/event";
+@import "blocks/gallery";
+@import "blocks/subscribe";
+@import "blocks/footer";
+@import "blocks/arrow-up";
