--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,22 +1,14 @@
 .header {
-  background-color: rgb(196, 194, 194);
-
   @include page-grid;
-
-  @include mobile {
-    background-color: rgba(136, 136, 247, 0.14);
-  }
 
   @include tablet {
     padding-inline: 34px;
     height: 384px;
-    background-color: rgba(245, 245, 83, 0.47);
   }
 
   @include desktop {
     height: 655px;
     padding: 0;
-    background-color: rgba(247, 7, 7, 0.23);
 
     @include desktop-container;
   }
@@ -29,8 +21,7 @@
     }
 
     @include tablet {
-      padding: 0;
-      padding-top: 39px;
+      padding: 40px 0 0;
       position: relative;
       grid-row: 1;
       font-size: 40px;
@@ -43,29 +34,8 @@
     }
   }
 
-  &__icon {
-    width: 24px;
-    height: 24px;
-    display: block;
-    background-size: cover;
-
-    &--menu {
-      background-image: url(../images/icons/menu.svg);
-
-      @include mobile {
-        position: absolute;
-        top: 27px;
-        left: 20px;
-      }
-
-      @include tablet {
-        position: static;
-      }
-    }
-  }
-
   &__title {
-    color: #000;
+    color: $main-black-color;
     font-family: $montserrat;
     font-weight: 700;
     line-height: 120%;
@@ -94,7 +64,7 @@
     position: absolute;
     bottom: 90px;
     left: 0;
-    color: #687480;
+    color: $main-grey-color;
     font-family: $ibm;
     font-size: 14px;
     font-weight: 700;
@@ -112,7 +82,7 @@
       left: 50%;
       height: 70px;
       width: 1px;
-      background-color: #1a5a4c;
+      background-color: $main-green-color;
     }
   }
 
@@ -145,7 +115,7 @@
     text-decoration: none;
     display: block;
     margin: 15px 0 0;
-    color: #0f0e08;
+    color: $secondary-black-color;
     text-align: center;
     font-family: $montserrat;
     font-weight: 700;
@@ -169,7 +139,7 @@
 
 .buy-tickets {
   display: flex;
-  border: 1px solid #1a5a4c;
+  border: 1px solid $main-green-color;
   text-decoration: none;
 
   @include tablet {
@@ -184,7 +154,7 @@
   &__text {
     text-transform: uppercase;
 
-    color: #0f0e08;
+    color: $secondary-black-color;
     font-family: $ibm;
     font-size: 16px;
     font-weight: 500;
@@ -202,13 +172,13 @@
   }
 
   &__arrow {
-    background-color: #1a5a4c;
+    background-color: $main-green-color;
     background-image: url("../images/right-arrow.svg");
     background-position: center;
     background-repeat: no-repeat;
 
     @include mobile {
-      width: 50px;
+      min-width: 50px;
       height: 48px;
     }
 
