--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,25 @@
 @import "utils";
 @import "blocks";
+@import "elements";
 
 * {
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+  &:has(menu:target) {
+    overflow: hidden;
+  }
+}
+
 body {
-  background: #fff;
+  background: $main-white-color;
   margin: 0;
   padding: 0;
   font-family: "IBM Plex Sans", sans-serif;
+}
+
+footer {
+  margin-top: 200px;
 }
