--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,3 +3,12 @@ $desktop-min-width: 1280px;
 $container-max-width: 1170px;
 $montserrat: "Montserrat", sans-serif;
 $ibm: "IBM Plex Sans", sans-serif;
+
+// COLORS
+$main-green-color: #1a5a4c;
+$main-grey-color: #687480;
+$secondary-grey-color: #4e4e4e;
+$main-red-color: #f14a27;
+$main-black-color: #000;
+$secondary-black-color: #0f0e08;
+$main-white-color: #fff;
