created footer & remake slider

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -58,6 +58,10 @@
 
   &__schedule {
     margin-top: 24px;
+    font-family: IBM Plex Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 150%;
 
     @include onTablet {
       margin-top: 0;
@@ -69,6 +73,7 @@
 
     &-title {
       margin-bottom: 20px;
+      font-weight: 400;
     }
 
     &-items {
