--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,114 +1,44 @@
 .gallery {
-  position: relative;
-  width: 100%;
-  max-height: 500px;
-  height: 100%;
-  z-index: -1;
+  &__img {
+    width: 100%;
+    height: 100%;
 
-  .gallery-slider__nav {
-    position: absolute;
-    bottom: 0;
+    &-2,
+    &-3,
+    &-4 {
+      display: none;
+    }
   }
 
-  &-slider {
-    width: 100%;
-    max-height: 410px;
-    height: auto;
+  &__slide {
+    min-width: 100%;
+    height: 410px;
+  }
+
+  &__slides {
+    display: flex;
     overflow: hidden;
-    // overflow-x: hidden;
+  }
 
-    &__nav {
-      position: absolute;
-      display: flex;
-      width: fit-content;
-      height: auto;
-      bottom: 16px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    margin-inline: auto;
+    width: 100px;
 
-    &__btn {
-      position: relative;
-      display: flex;
-      height: 9px;
+    &-btn {
       width: 9px;
-      border-radius: 50%;
-      margin: 6px;
-      cursor: pointer;
+      height: 9px;
       background-color: #e0e0e0;
-      z-index: 10;
-      transition: all 0.4s ease;
+      border-radius: 50%;
+      margin-top: 20px;
+      cursor: pointer;
+      transition: all 0.4s;
 
       &:hover {
         background-color: $green;
+        transition: all 0.4s;
       }
     }
-
-    &__slides {
-      width: 400%;
-      height: 100%;
-      display: flex;
-      padding-bottom: 100px;
-
-      @include onTablet {
-        width: 200%;
-      }
-    }
-
-    &__slide {
-      width: 25%;
-      transition: all 0.6s ease;
-
-      @include onTablet {
-        width: 50%;
-        margin-right: 20px;
-      }
-
-      & img {
-        height: 100%;
-        width: 100%;
-      }
-    }
-  }
-
-  &-middle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-  }
-}
-
-input[name="button"] {
-  position: absolute;
-  visibility: hidden;
-}
-
-#btn1:checked ~ .s1 {
-  margin-left: 0;
-  @include onTablet {
-    margin-left: 0;
-  }
-}
-
-#btn2:checked ~ .s1 {
-  margin-left: -25%;
-  @include onTablet {
-    margin-left: -50%;
-  }
-}
-
-#btn3:checked ~ .s1 {
-  margin-left: -50%;
-  @include onTablet {
-    margin-left: -125%;
-  }
-}
-
-#btn4:checked ~ .s1 {
-  margin-left: -75%;
-  @include onTablet {
-    margin-left: -150%;
   }
 }
