fixed slider & finished landing

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -129,6 +129,10 @@
       margin-left: 135px;
     }
 
+    @include onDesktop {
+      margin-top: 0;
+    }
+
     &__item {
       flex-basis: 50%;
       padding-bottom: 20px;
