--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -22,6 +22,7 @@
     position: absolute;
     top: 10px;
     left: 45%;
+    margin-top: 10px;
 
     @include onTablet {
       left: 10%;
@@ -80,6 +81,17 @@
       align-items: center;
       justify-content: center;
       height: 50px;
+      transition: all 0.3s;
+
+      &:hover {
+        .header__content-link {
+          opacity: 0.8;
+          transition: all 0.3s;
+        }
+        .header__content-arrow {
+          opacity: 0.8;
+        }
+      }
 
       @include onTablet {
         height: 70px;
@@ -104,6 +116,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      transition: all 0.3s;
 
       @include onTablet {
         padding-inline: 68px;
@@ -118,6 +131,7 @@
       padding-block: 16px;
       padding-inline: 13px;
       height: 100%;
+      transition: all 0.3s;
 
       @include onTablet {
         padding-inline: 23px;
@@ -126,6 +140,11 @@
 
     &-line {
       display: none;
+
+      &:hover {
+        color: $green;
+        opacity: 1;
+      }
 
       @include onDesktop {
         display: block;
