--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -4,9 +4,11 @@
     height: 100%;
     transition: all 0.3s;
 
-    &:hover {
-      transform: scale(0.9);
-      transition: all 0.3s;
+    @include onDesktop {
+      &:hover {
+        transform: scale(0.9);
+        transition: all 0.3s;
+      }
     }
   }
 
