--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -45,10 +45,21 @@
       width: 100%;
       height: 100%;
 
+      @include onTablet {
+        margin-bottom: 44px;
+      }
+
       @include onDesktop {
         height: 520px;
         width: 670px;
+
+        &:hover {
+          transform: scale(1.1);
+          transition: all 0.4s;
+        }
       }
+
+      transition: all 0.4s;
     }
 
     &__info {
