--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -3,7 +3,6 @@
   background-repeat: no-repeat;
   background-position: center;
   min-width: 100%;
-  height: 100%;
   background-size: cover;
   height: 386px;
   display: flex;
@@ -25,7 +24,7 @@
   &__title {
     color: #fff;
     text-align: center;
-    font-family: Montserrat;
+    font-family: "Montserrat", sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 100%;
@@ -40,7 +39,7 @@
   &__text {
     color: #fff;
     text-align: center;
-    font-family: IBM Plex Sans;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 150%;
@@ -66,7 +65,7 @@
     padding-block: 18px;
     padding-left: 24px;
     padding-right: 10px;
-    font-family: Montserrat;
+    font-family: "Montserrat", sans-serif;
     color: $secondary-color;
     font-size: 14px;
     font-weight: 400;
