--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -49,7 +49,7 @@
   &__schedule {
     margin-right: 20px;
     color: $accent-title;
-    font-family: IBM Plex Sans;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     line-height: 150%;
     flex-basis: 50%;
@@ -59,7 +59,7 @@
     }
 
     &-title {
-      line-height: 140.625%;
+      line-height: 140%;
       font-weight: 400;
       margin-bottom: 20px;
     }
@@ -97,7 +97,7 @@
 
   &__contacts {
     color: $accent-title;
-    font-family: IBM Plex Sans;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
@@ -105,10 +105,10 @@
 
     &-title {
       color: $accent-title;
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 400;
-      line-height: 140.625%;
+      line-height: 140%;
       margin-bottom: 20px;
     }
   }
@@ -140,7 +140,7 @@
 
     &__link {
       color: $accent-title;
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 100%;
@@ -150,10 +150,10 @@
   &__rights {
     color: $accent-title;
     text-align: center;
-    font-family: IBM Plex Sans;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 12px;
     font-weight: 300;
-    line-height: 140.625%;
+    line-height: 140%;
     margin-top: 60px;
 
     @include onTablet {
