--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -59,7 +59,7 @@
     &-title {
       color: #000;
       text-align: center;
-      font-family: Montserrat;
+      font-family: "Montserrat", sans-serif;
       font-size: 45px;
       font-weight: 700;
       line-height: 100%;
@@ -71,8 +71,40 @@
         padding-right: 20px;
         text-align: left;
       }
+    }
 
-      @include onDesktop {
+    &-link {
+      border: 1px solid $green;
+      padding-inline: 80px;
+      text-decoration: none;
+      color: #0f0e08;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s;
+
+      @include onTablet {
+        padding-inline: 68px;
+      }
+    }
+
+    &-arrow {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $green;
+      padding-block: 16px;
+      padding-inline: 13px;
+      height: 100%;
+      transition: all 0.3s;
+
+      @include onTablet {
+        padding-inline: 23px;
       }
     }
 
@@ -103,41 +135,6 @@
       }
     }
 
-    &-link {
-      border: 1px solid $green;
-      padding-inline: 80px;
-      text-decoration: none;
-      color: #0f0e08;
-      font-family: IBM Plex Sans;
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 0.3s;
-
-      @include onTablet {
-        padding-inline: 68px;
-      }
-    }
-
-    &-arrow {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: $green;
-      padding-block: 16px;
-      padding-inline: 13px;
-      height: 100%;
-      transition: all 0.3s;
-
-      @include onTablet {
-        padding-inline: 23px;
-      }
-    }
-
     &-line {
       display: none;
 
@@ -152,7 +149,7 @@
         left: 40px;
         transform: rotate(-90deg);
         text-transform: uppercase;
-        font-family: IBM Plex Sans;
+        font-family: "IBM Plex Sans", sans-serif;
         font-size: 14px;
         font-style: normal;
         font-weight: 700;
