--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -43,7 +43,7 @@
 
     &__link {
       color: #fff;
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-weight: 500;
       line-height: 100%;
@@ -58,7 +58,7 @@
 
   &__schedule {
     margin-top: 24px;
-    font-family: IBM Plex Sans;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
