add cursor: pointer for submit button

--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -112,6 +112,7 @@
     background-image: url("../images/right-arrow-black.svg");
     background-position: center;
     background-repeat: no-repeat;
+    cursor: pointer;
 
     @include mobile {
       height: 50px;
