--- a/src/styles/blocks/galery.block.scss
+++ b/src/styles/blocks/galery.block.scss
@@ -169,7 +169,7 @@
     cursor: pointer;
   border-radius: 12px;
   color: #000;
-  opacity: 30%;
+  background-color: rgb(163, 111, 43);
   animation: move-arrows-left 2s ease-in-out infinite alternate;
 
   @keyframes move-arrows-left {
@@ -185,22 +185,24 @@
   }
 
   @include on-phone {
-    bottom: -440px;
-    left: -230px
+    bottom: -500px;
+    left: -200px
   }
 
   @include on-tablet {
-    bottom: -730px;
-    left: -230px;
-    height: 32px;
-    width: 32px;
+     display: none;
+     bottom: -730px;
+     left: -230px;
+     height: 32px;
+     width: 32px;
   }
 
   @include on-desctop {
-    bottom: -780px;
-    left: -190px;
-    height: 32px;
-    width: 32px;
+     display: none;
+     bottom: -780px;
+     left: -190px;
+     height: 32px;
+     width: 32px;
   }
 
 }
@@ -212,10 +214,10 @@
   background-image: url(../images/ArrowRight.png);
   background-position: center;
   background-size: contain;
+  background-color: rgb(163, 111, 43);
   cursor: pointer;
   border-radius: 12px;
   color: #000;
-  opacity: 30%;
   animation: move-arrows-right 2s ease-in-out infinite alternate;
 
   @keyframes move-arrows-right {
@@ -231,21 +233,23 @@
   }
 
   @include on-phone {
-    bottom: -440px;
-    left: -50px
+    bottom: -500px;
+    left: 90px
   }
 
   @include on-tablet {
-    bottom: -730px;
-    height: 32px;
-    width: 32px;
+     display: none;
+     bottom: -730px;
+     height: 32px;
+     width: 32px;
   }
 
   @include on-desctop {
-    bottom: -780px;
-    left: -15px;
-    height: 32px;
-    width: 32px;
+     display: none;
+     bottom: -780px;
+     left: -15px;
+     height: 32px;
+     width: 32px;
   }
 }
 
