--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -42,10 +42,11 @@
   }
 
   @include on-tablet {
-    width: 360px;
+    width: 374px;
     height: 384px;
     grid-column: 4/6;
     grid-row: 1;
+    margin-left: 10px;
   }
 
   @include on-desctop {
