--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -50,7 +50,7 @@
   }
 
   @include on-desctop {
-    margin: 0 108px 0 0;
+    margin: 0 108px 0 -50px;
   }
 
 }
@@ -82,17 +82,17 @@
 .menu__block {
   display: flex;
   flex-direction: column;
-  transition: transform 0.3s;
+  justify-content: start;
 
   .menu__text {
-    box-sizing: border-box;
     width: 169px;
     font-family: $ibm;
     font-weight: 500;
     font-size: 22px;
     color: $white;
-    padding: 0 0 30px;
-    transition: 0.3s ease;
+    padding: 0 0 20px;
+    transition:  0.4s;
+
 
 
     @include on-phone {
@@ -107,7 +107,8 @@
 
     &:hover {
       font-size: 23px;
-      transition: 0.3s ease;
+      transition: 0.4s ease-in;
+      margin-bottom: -8px;
     }
   }
 
